# snakelog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: install_app.yaml
snakelog/: cli.py
tests/: test_snakelog.py
